@@ -9,6 +9,9 @@
  * heiner@jverein.de
  * www.jverein.de
  * $Log$
+ * Revision 1.34  2011-01-30 10:12:40  jost
+ * Textsuche implementiert
+ *
  * Revision 1.33  2011-01-15 09:46:49  jost
  * Tastatursteuerung wegen Problemen mit Jameica/Hibiscus wieder entfernt.
  *
@@ -138,6 +141,7 @@ import de.jost_net.JVerein.rmi.Konto;
 import de.jost_net.JVerein.rmi.Mitglied;
 import de.jost_net.JVerein.rmi.Mitgliedskonto;
 import de.jost_net.JVerein.util.Dateiname;
+import de.jost_net.JVerein.util.JVDateFormatTTMMJJJJ;
 import de.willuhn.datasource.GenericObject;
 import de.willuhn.datasource.rmi.DBIterator;
 import de.willuhn.datasource.rmi.DBService;
@@ -255,7 +259,7 @@ public class BuchungsControl extends AbstractControl
     Integer ui = getBuchung().getUmsatzid();
     if (ui == null)
     {
-      ui = new Integer(0);
+      ui = Integer.valueOf(0);
     }
     umsatzid = new IntegerInput(ui);
     umsatzid.setEnabled(false);
@@ -287,7 +291,7 @@ public class BuchungsControl extends AbstractControl
     Integer i = getBuchung().getAuszugsnummer();
     if (i == null)
     {
-      i = new Integer(0);
+      i = Integer.valueOf(0);
     }
     auszugsnummer = new IntegerInput(i);
     return auszugsnummer;
@@ -302,7 +306,7 @@ public class BuchungsControl extends AbstractControl
     Integer i = getBuchung().getBlattnummer();
     if (i == null)
     {
-      i = new Integer(0);
+      i = Integer.valueOf(0);
     }
     blattnummer = new IntegerInput(i);
     return blattnummer;
@@ -356,7 +360,7 @@ public class BuchungsControl extends AbstractControl
       return datum;
     }
     Date d = getBuchung().getDatum();
-    this.datum = new DateInput(d, Einstellungen.DATEFORMAT);
+    this.datum = new DateInput(d, new JVDateFormatTTMMJJJJ());
     this.datum.setTitle("Datum");
     this.datum.setText("Bitte Datum wählen");
     this.datum.addListener(new Listener()
@@ -509,14 +513,14 @@ public class BuchungsControl extends AbstractControl
     Date d = null;
     try
     {
-      d = Einstellungen.DATEFORMAT.parse(settings.getString("vondatum",
-          "01.01.2006"));
+      d = new JVDateFormatTTMMJJJJ()
+          .parse(settings.getString("vondatum", "01.01.2006"));
     }
     catch (ParseException e)
     {
       //
     }
-    this.vondatum = new DateInput(d, Einstellungen.DATEFORMAT);
+    this.vondatum = new DateInput(d, new JVDateFormatTTMMJJJJ());
     this.vondatum.setTitle("Anfangsdatum");
     this.vondatum.setText("Bitte Anfangsdatum wählen");
     this.vondatum.addListener(new Listener()
@@ -529,7 +533,7 @@ public class BuchungsControl extends AbstractControl
         {
           return;
         }
-        settings.setAttribute("vondatum", Einstellungen.DATEFORMAT.format(date));
+        settings.setAttribute("vondatum", new JVDateFormatTTMMJJJJ().format(date));
       }
     });
     return vondatum;
@@ -544,14 +548,14 @@ public class BuchungsControl extends AbstractControl
     Date d = null;
     try
     {
-      d = Einstellungen.DATEFORMAT.parse(settings.getString("bisdatum",
-          "31.12.2006"));
+      d = new JVDateFormatTTMMJJJJ()
+          .parse(settings.getString("bisdatum", "31.12.2006"));
     }
     catch (ParseException e)
     {
       //
     }
-    this.bisdatum = new DateInput(d, Einstellungen.DATEFORMAT);
+    this.bisdatum = new DateInput(d, new JVDateFormatTTMMJJJJ());
     this.bisdatum.setTitle("Anfangsdatum");
     this.bisdatum.setText("Bitte Anfangsdatum wählen");
     this.bisdatum.addListener(new Listener()
@@ -564,7 +568,7 @@ public class BuchungsControl extends AbstractControl
         {
           return;
         }
-        settings.setAttribute("bisdatum", Einstellungen.DATEFORMAT.format(date));
+        settings.setAttribute("bisdatum", new JVDateFormatTTMMJJJJ().format(date));
       }
     });
     return bisdatum;
@@ -771,7 +775,7 @@ public class BuchungsControl extends AbstractControl
         }
       });
       buchungsList.addColumn("Datum", "datum", new DateFormatter(
-          Einstellungen.DATEFORMAT));
+          new JVDateFormatTTMMJJJJ()));
       buchungsList.addColumn("Auszug", "auszugsnummer");
       buchungsList.addColumn("Blatt", "blattnummer");
       buchungsList.addColumn("Name", "name");
