@@ -9,6 +9,9 @@
  * heiner@jverein.de
  * www.jverein.de
  * $Log$
+ * Revision 1.106  2011-02-03 22:01:51  jost
+ * Bugfix Kontextmenu
+ *
  * Revision 1.105  2011-02-02 21:59:14  jost
  * Auswertung erweitert um den Parameter "ohne EMail"
  *
@@ -391,6 +394,7 @@ import de.jost_net.JVerein.server.EigenschaftenNode;
 import de.jost_net.JVerein.server.MitgliedUtils;
 import de.jost_net.JVerein.util.Dateiname;
 import de.jost_net.JVerein.util.IbanBicCalc;
+import de.jost_net.JVerein.util.JVDateFormatTTMMJJJJ;
 import de.jost_net.JVerein.util.MitgliedSpaltenauswahl;
 import de.willuhn.datasource.GenericObject;
 import de.willuhn.datasource.GenericObjectNode;
@@ -909,7 +913,7 @@ public class MitgliedControl extends AbstractControl
     {
       d = null;
     }
-    this.geburtsdatum = new DateInput(d, Einstellungen.DATEFORMAT);
+    this.geburtsdatum = new DateInput(d, new JVDateFormatTTMMJJJJ());
     this.geburtsdatum.setName("Geburtsdatum");
     this.geburtsdatum.setTitle("Geburtsdatum");
     this.geburtsdatum.setText("Bitte Geburtsdatum wählen");
@@ -1139,7 +1143,7 @@ public class MitgliedControl extends AbstractControl
     {
       d = null;
     }
-    this.eintritt = new DateInput(d, Einstellungen.DATEFORMAT);
+    this.eintritt = new DateInput(d, new JVDateFormatTTMMJJJJ());
     this.eintritt.setTitle("Eintrittsdatum");
     this.eintritt.setName("Eintrittsdatum");
     this.eintritt.setText("Bitte Eintrittsdatum wählen");
@@ -1260,7 +1264,7 @@ public class MitgliedControl extends AbstractControl
       return zahler;
     }
 
-    String cond = "";
+    StringBuffer cond = new StringBuffer();
 
     // Beitragsgruppen ermitteln, die Zahler für andere Mitglieder sind
     DBIterator bg = Einstellungen.getDBService().createList(
@@ -1270,13 +1274,14 @@ public class MitgliedControl extends AbstractControl
     {
       if (cond.length() > 0)
       {
-        cond += " OR ";
+        cond.append(" OR ");
       }
       Beitragsgruppe beitragsgruppe = (Beitragsgruppe) bg.next();
-      cond += "beitragsgruppe = " + beitragsgruppe.getID();
+      cond.append("beitragsgruppe = ");
+      cond.append(beitragsgruppe.getID());
     }
     DBIterator zhl = Einstellungen.getDBService().createList(Mitglied.class);
-    zhl.addFilter(cond);
+    zhl.addFilter(cond.toString());
     MitgliedUtils.setNurAktive(zhl);
     MitgliedUtils.setMitglied(zhl);
     zhl.setOrder("ORDER BY name, vorname");
@@ -1343,7 +1348,7 @@ public class MitgliedControl extends AbstractControl
     }
     Date d = getMitglied().getAustritt();
 
-    this.austritt = new DateInput(d, Einstellungen.DATEFORMAT);
+    this.austritt = new DateInput(d, new JVDateFormatTTMMJJJJ());
     this.austritt.setTitle("Austrittsdatum");
     this.austritt.setName("Austrittsdatum");
     this.austritt.setText("Bitte Austrittsdatum wählen");
@@ -1370,7 +1375,7 @@ public class MitgliedControl extends AbstractControl
     }
     Date d = getMitglied().getKuendigung();
 
-    this.kuendigung = new DateInput(d, Einstellungen.DATEFORMAT);
+    this.kuendigung = new DateInput(d, new JVDateFormatTTMMJJJJ());
     this.kuendigung.setName("Kündigungsdatum");
     this.kuendigung.setTitle("Kündigungsdatum");
     this.kuendigung.setText("Bitte Kündigungsdatum wählen");
@@ -1397,7 +1402,7 @@ public class MitgliedControl extends AbstractControl
     }
     Date d = getMitglied().getSterbetag();
 
-    this.sterbetag = new DateInput(d, Einstellungen.DATEFORMAT);
+    this.sterbetag = new DateInput(d, new JVDateFormatTTMMJJJJ());
     this.sterbetag.setName("Sterbetag");
     this.sterbetag.setTitle("Sterbetag");
     this.sterbetag.setText("Bitte Sterbetag wählen");
@@ -1503,7 +1508,7 @@ public class MitgliedControl extends AbstractControl
           break;
         case Datentyp.DATUM:
           Date d = zf.getFeldDatum();
-          DateInput di = new DateInput(d, Einstellungen.DATEFORMAT);
+          DateInput di = new DateInput(d, new JVDateFormatTTMMJJJJ());
           di.setName(fd.getLabel());
           di.setTitle(fd.getLabel());
           di.setText("Bitte " + fd.getLabel() + " wählen");
@@ -1571,14 +1576,14 @@ public class MitgliedControl extends AbstractControl
     zusatzbetraegeList.setRememberOrder(true);
 
     zusatzbetraegeList.addColumn("Startdatum", "startdatum", new DateFormatter(
-        Einstellungen.DATEFORMAT));
+        new JVDateFormatTTMMJJJJ()));
     zusatzbetraegeList.addColumn("nächste Fälligkeit", "faelligkeit",
-        new DateFormatter(Einstellungen.DATEFORMAT));
+        new DateFormatter(new JVDateFormatTTMMJJJJ()));
     zusatzbetraegeList.addColumn("letzte Ausführung", "ausfuehrung",
-        new DateFormatter(Einstellungen.DATEFORMAT));
+        new DateFormatter(new JVDateFormatTTMMJJJJ()));
     zusatzbetraegeList.addColumn("Intervall", "intervalltext");
     zusatzbetraegeList.addColumn("Endedatum", "endedatum", new DateFormatter(
-        Einstellungen.DATEFORMAT));
+        new JVDateFormatTTMMJJJJ()));
     zusatzbetraegeList.addColumn("Buchungstext", "buchungstext");
     zusatzbetraegeList.addColumn("Betrag", "betrag", new CurrencyFormatter("",
         Einstellungen.DECIMALFORMAT));
@@ -1603,10 +1608,10 @@ public class MitgliedControl extends AbstractControl
     wiedervorlageList.setRememberOrder(true);
 
     wiedervorlageList.addColumn("Datum", "datum", new DateFormatter(
-        Einstellungen.DATEFORMAT));
+        new JVDateFormatTTMMJJJJ()));
     wiedervorlageList.addColumn("Vermerk", "vermerk");
     wiedervorlageList.addColumn("Erledigung", "erledigung", new DateFormatter(
-        Einstellungen.DATEFORMAT));
+        new JVDateFormatTTMMJJJJ()));
     wiedervorlageList.setContextMenu(new WiedervorlageMenu(wiedervorlageList));
     return wiedervorlageList;
   }
@@ -1628,7 +1633,7 @@ public class MitgliedControl extends AbstractControl
     arbeitseinsatzList.setContextMenu(new ArbeitseinsatzMenu());
 
     arbeitseinsatzList.addColumn("Datum", "datum", new DateFormatter(
-        Einstellungen.DATEFORMAT));
+        new JVDateFormatTTMMJJJJ()));
     arbeitseinsatzList.addColumn("Stunden", "stunden", new CurrencyFormatter(
         "", Einstellungen.DECIMALFORMAT));
     arbeitseinsatzList.addColumn("Bemerkung", "bemerkung");
@@ -1653,9 +1658,9 @@ public class MitgliedControl extends AbstractControl
 
     lehrgaengeList.addColumn("Lehrgangsart", "lehrgangsart");
     lehrgaengeList.addColumn("von/am", "von", new DateFormatter(
-        Einstellungen.DATEFORMAT));
+        new JVDateFormatTTMMJJJJ()));
     lehrgaengeList.addColumn("bis", "bis", new DateFormatter(
-        Einstellungen.DATEFORMAT));
+        new JVDateFormatTTMMJJJJ()));
     lehrgaengeList.addColumn("Veranstalter", "veranstalter");
     lehrgaengeList.addColumn("Ergebnis", "ergebnis");
     lehrgaengeList.setContextMenu(new LehrgangMenu());
@@ -1674,14 +1679,14 @@ public class MitgliedControl extends AbstractControl
     {
       try
       {
-        d = Einstellungen.DATEFORMAT.parse(tmp);
+        d = new JVDateFormatTTMMJJJJ().parse(tmp);
       }
       catch (ParseException e)
       {
         //
       }
     }
-    this.geburtsdatumvon = new DateInput(d, Einstellungen.DATEFORMAT);
+    this.geburtsdatumvon = new DateInput(d, new JVDateFormatTTMMJJJJ());
     this.geburtsdatumvon.setTitle("Geburtsdatum");
     this.geburtsdatumvon.setText("Beginn des Geburtszeitraumes");
     this.geburtsdatumvon.addListener(new Listener()
@@ -1711,14 +1716,14 @@ public class MitgliedControl extends AbstractControl
     {
       try
       {
-        d = Einstellungen.DATEFORMAT.parse(tmp);
+        d = new JVDateFormatTTMMJJJJ().parse(tmp);
       }
       catch (ParseException e)
       {
         //
       }
     }
-    this.geburtsdatumbis = new DateInput(d, Einstellungen.DATEFORMAT);
+    this.geburtsdatumbis = new DateInput(d, new JVDateFormatTTMMJJJJ());
     this.geburtsdatumbis.setTitle("Geburtsdatum");
     this.geburtsdatumbis.setText("Ende des Geburtszeitraumes");
     this.geburtsdatumbis.addListener(new Listener()
@@ -1748,14 +1753,14 @@ public class MitgliedControl extends AbstractControl
     {
       try
       {
-        d = Einstellungen.DATEFORMAT.parse(tmp);
+        d = new JVDateFormatTTMMJJJJ().parse(tmp);
       }
       catch (ParseException e)
       {
         //
       }
     }
-    this.sterbedatumvon = new DateInput(d, Einstellungen.DATEFORMAT);
+    this.sterbedatumvon = new DateInput(d, new JVDateFormatTTMMJJJJ());
     this.sterbedatumvon.setTitle("Sterbedatum");
     this.sterbedatumvon.setText("Beginn des Sterbezeitraumes");
     this.sterbedatumvon.addListener(new Listener()
@@ -1785,14 +1790,14 @@ public class MitgliedControl extends AbstractControl
     {
       try
       {
-        d = Einstellungen.DATEFORMAT.parse(tmp);
+        d = new JVDateFormatTTMMJJJJ().parse(tmp);
       }
       catch (ParseException e)
       {
         //
       }
     }
-    this.sterbedatumbis = new DateInput(d, Einstellungen.DATEFORMAT);
+    this.sterbedatumbis = new DateInput(d, new JVDateFormatTTMMJJJJ());
     this.sterbedatumbis.setTitle("Sterbedatum");
     this.sterbedatumbis.setText("Ende des Sterbezeitraumes");
     this.sterbedatumbis.addListener(new Listener()
@@ -1822,14 +1827,14 @@ public class MitgliedControl extends AbstractControl
     {
       try
       {
-        d = Einstellungen.DATEFORMAT.parse(tmp);
+        d = new JVDateFormatTTMMJJJJ().parse(tmp);
       }
       catch (ParseException e)
       {
         //
       }
     }
-    this.eintrittvon = new DateInput(d, Einstellungen.DATEFORMAT);
+    this.eintrittvon = new DateInput(d, new JVDateFormatTTMMJJJJ());
     this.eintrittvon.setTitle("Eintrittsdatum");
     this.eintrittvon.setText("Beginn des Eintrittszeitraumes");
     this.eintrittvon.addListener(new Listener()
@@ -1864,14 +1869,14 @@ public class MitgliedControl extends AbstractControl
     {
       try
       {
-        d = Einstellungen.DATEFORMAT.parse(tmp);
+        d = new JVDateFormatTTMMJJJJ().parse(tmp);
       }
       catch (ParseException e)
       {
         //
       }
     }
-    this.eintrittbis = new DateInput(d, Einstellungen.DATEFORMAT);
+    this.eintrittbis = new DateInput(d, new JVDateFormatTTMMJJJJ());
     this.eintrittbis.setTitle("Eintrittsdatum");
     this.eintrittbis.setText("Ende des Eintrittszeitraumes");
     this.eintrittbis.addListener(new Listener()
@@ -1901,14 +1906,14 @@ public class MitgliedControl extends AbstractControl
     {
       try
       {
-        d = Einstellungen.DATEFORMAT.parse(tmp);
+        d = new JVDateFormatTTMMJJJJ().parse(tmp);
       }
       catch (ParseException e)
       {
         //
       }
     }
-    this.austrittvon = new DateInput(d, Einstellungen.DATEFORMAT);
+    this.austrittvon = new DateInput(d, new JVDateFormatTTMMJJJJ());
     this.austrittvon.setTitle("Austrittsdatum");
     this.austrittvon.setText("Beginn des Austrittszeitraumes");
     this.austrittvon.addListener(new Listener()
@@ -1943,14 +1948,14 @@ public class MitgliedControl extends AbstractControl
     {
       try
       {
-        d = Einstellungen.DATEFORMAT.parse(tmp);
+        d = new JVDateFormatTTMMJJJJ().parse(tmp);
       }
       catch (ParseException e)
       {
         //
       }
     }
-    this.austrittbis = new DateInput(d, Einstellungen.DATEFORMAT);
+    this.austrittbis = new DateInput(d, new JVDateFormatTTMMJJJJ());
     this.austrittbis.setTitle("Austrittsdatum");
     this.austrittbis.setText("Ende des Austrittszeitraumes");
     this.austrittbis.addListener(new Listener()
@@ -1978,7 +1983,7 @@ public class MitgliedControl extends AbstractControl
     cal.set(Calendar.MONTH, Calendar.DECEMBER);
     cal.set(Calendar.DAY_OF_MONTH, 31);
     Date d = new Date(cal.getTimeInMillis());
-    this.stichtag = new DateInput(d, Einstellungen.DATEFORMAT);
+    this.stichtag = new DateInput(d, new JVDateFormatTTMMJJJJ());
     this.stichtag.setTitle("Stichtag");
     this.stichtag.addListener(new Listener()
     {
@@ -2031,25 +2036,25 @@ public class MitgliedControl extends AbstractControl
     d.addCloseListener(new EigenschaftenListener());
 
     StringTokenizer stt = new StringTokenizer(tmp, ",");
-    String text = "";
+    StringBuilder text = new StringBuilder();
     while (stt.hasMoreElements())
     {
       if (text.length() > 0)
       {
-        text += ", ";
+        text.append(", ");
       }
       try
       {
         Eigenschaft ei = (Eigenschaft) Einstellungen.getDBService()
             .createObject(Eigenschaft.class, stt.nextToken());
-        text += ei.getBezeichnung();
+        text.append(ei.getBezeichnung());
       }
       catch (ObjectNotFoundException e)
       {
         //
       }
     }
-    eigenschaftenabfrage = new DialogInput(text, d);
+    eigenschaftenabfrage = new DialogInput(text.toString(), d);
     eigenschaftenabfrage.addListener(new Listener()
     {
 
@@ -2246,7 +2251,7 @@ public class MitgliedControl extends AbstractControl
       if (tmp != null)
       {
         settings.setAttribute("mitglied.geburtsdatumvon",
-            Einstellungen.DATEFORMAT.format(tmp));
+            new JVDateFormatTTMMJJJJ().format(tmp));
       }
       else
       {
@@ -2260,7 +2265,7 @@ public class MitgliedControl extends AbstractControl
       if (tmp != null)
       {
         settings.setAttribute("mitglied.geburtsdatumbis",
-            Einstellungen.DATEFORMAT.format(tmp));
+            new JVDateFormatTTMMJJJJ().format(tmp));
       }
       else
       {
@@ -2274,7 +2279,7 @@ public class MitgliedControl extends AbstractControl
       if (tmp != null)
       {
         settings.setAttribute("mitglied.sterbedatumvon",
-            Einstellungen.DATEFORMAT.format(tmp));
+            new JVDateFormatTTMMJJJJ().format(tmp));
       }
       else
       {
@@ -2288,7 +2293,7 @@ public class MitgliedControl extends AbstractControl
       if (tmp != null)
       {
         settings.setAttribute("mitglied.sterbedatumbis",
-            Einstellungen.DATEFORMAT.format(tmp));
+            new JVDateFormatTTMMJJJJ().format(tmp));
       }
       else
       {
@@ -2302,7 +2307,7 @@ public class MitgliedControl extends AbstractControl
       if (tmp != null)
       {
         settings.setAttribute("mitglied.eintrittvon",
-            Einstellungen.DATEFORMAT.format(tmp));
+            new JVDateFormatTTMMJJJJ().format(tmp));
       }
       else
       {
@@ -2316,7 +2321,7 @@ public class MitgliedControl extends AbstractControl
       if (tmp != null)
       {
         settings.setAttribute("mitglied.eintrittbis",
-            Einstellungen.DATEFORMAT.format(tmp));
+            new JVDateFormatTTMMJJJJ().format(tmp));
       }
       else
       {
@@ -2330,7 +2335,7 @@ public class MitgliedControl extends AbstractControl
       if (tmp != null)
       {
         settings.setAttribute("mitglied.austrittvon",
-            Einstellungen.DATEFORMAT.format(tmp));
+            new JVDateFormatTTMMJJJJ().format(tmp));
       }
       else
       {
@@ -2344,7 +2349,7 @@ public class MitgliedControl extends AbstractControl
       if (tmp != null)
       {
         settings.setAttribute("mitglied.austrittbis",
-            Einstellungen.DATEFORMAT.format(tmp));
+            new JVDateFormatTTMMJJJJ().format(tmp));
       }
       else
       {
@@ -2354,7 +2359,7 @@ public class MitgliedControl extends AbstractControl
 
     if (eigenschaftenAuswahlTree != null)
     {
-      String tmp = "";
+      StringBuffer tmp = new StringBuffer();
       for (Object o : eigenschaftenAuswahlTree.getItems())
       {
         EigenschaftenNode node = (EigenschaftenNode) o;
@@ -2362,12 +2367,12 @@ public class MitgliedControl extends AbstractControl
         {
           if (tmp.length() > 0)
           {
-            tmp += ",";
+            tmp.append(",");
           }
-          tmp += node.getEigenschaft().getID();
+          tmp.append(node.getEigenschaft().getID());
         }
       }
-      settings.setAttribute("mitglied.eigenschaften", tmp);
+      settings.setAttribute("mitglied.eigenschaften", tmp.toString());
     }
 
     if (beitragsgruppeausw != null)
@@ -2419,7 +2424,7 @@ public class MitgliedControl extends AbstractControl
         while (it.hasNext())
         {
           EigenschaftGruppe eg = (EigenschaftGruppe) it.next();
-          pflichtgruppen.put(eg.getID(), new Boolean(false));
+          pflichtgruppen.put(eg.getID(), Boolean.valueOf(false));
         }
         for (Object o1 : eigenschaftenTree.getItems())
         {
@@ -2429,8 +2434,8 @@ public class MitgliedControl extends AbstractControl
             if (node.getNodeType() == EigenschaftenNode.EIGENSCHAFTEN)
             {
               Eigenschaft ei = (Eigenschaft) node.getObject();
-              pflichtgruppen.put(ei.getEigenschaftGruppeId() + "", new Boolean(
-                  true));
+              pflichtgruppen.put(ei.getEigenschaftGruppeId() + "",
+                  Boolean.valueOf(true));
             }
           }
         }
@@ -2451,7 +2456,7 @@ public class MitgliedControl extends AbstractControl
         while (it.hasNext())
         {
           EigenschaftGruppe eg = (EigenschaftGruppe) it.next();
-          max1gruppen.put(eg.getID(), new Boolean(false));
+          max1gruppen.put(eg.getID(), Boolean.valueOf(false));
         }
         for (Object o1 : eigenschaftenTree.getItems())
         {
@@ -2474,7 +2479,7 @@ public class MitgliedControl extends AbstractControl
                 else
                 {
                   max1gruppen.put(ei.getEigenschaftGruppe().getID(),
-                      new Boolean(true));
+                      Boolean.valueOf(true));
                 }
               }
             }
@@ -2723,45 +2728,49 @@ public class MitgliedControl extends AbstractControl
       if (geburtsdatumvon.getValue() != null)
       {
         Date d = (Date) geburtsdatumvon.getValue();
-        subtitle += "Geburtsdatum von " + Einstellungen.DATEFORMAT.format(d)
+        subtitle += "Geburtsdatum von " + new JVDateFormatTTMMJJJJ().format(d)
             + "  ";
       }
       if (geburtsdatumbis.getValue() != null)
       {
         Date d = (Date) geburtsdatumbis.getValue();
-        subtitle += "Geburtsdatum bis " + Einstellungen.DATEFORMAT.format(d)
+        subtitle += "Geburtsdatum bis " + new JVDateFormatTTMMJJJJ().format(d)
             + "  ";
       }
       if (eintrittvon.getValue() != null)
       {
         Date d = (Date) eintrittvon.getValue();
-        subtitle += "Eintritt von " + Einstellungen.DATEFORMAT.format(d) + "  ";
+        subtitle += "Eintritt von " + new JVDateFormatTTMMJJJJ().format(d)
+            + "  ";
       }
       if (eintrittbis.getValue() != null)
       {
         Date d = (Date) eintrittbis.getValue();
-        subtitle += "Eintritt bis " + Einstellungen.DATEFORMAT.format(d) + "  ";
+        subtitle += "Eintritt bis " + new JVDateFormatTTMMJJJJ().format(d)
+            + "  ";
       }
       if (austrittvon.getValue() != null)
       {
         Date d = (Date) austrittvon.getValue();
-        subtitle += "Austritt von " + Einstellungen.DATEFORMAT.format(d) + "  ";
+        subtitle += "Austritt von " + new JVDateFormatTTMMJJJJ().format(d)
+            + "  ";
       }
       if (austrittbis.getValue() != null)
       {
         Date d = (Date) austrittbis.getValue();
-        subtitle += "Austritt bis " + Einstellungen.DATEFORMAT.format(d) + "  ";
+        subtitle += "Austritt bis " + new JVDateFormatTTMMJJJJ().format(d)
+            + "  ";
       }
       if (sterbedatumvon.getValue() != null)
       {
         Date d = (Date) sterbedatumvon.getValue();
-        subtitle += "Sterbetag von " + Einstellungen.DATEFORMAT.format(d)
+        subtitle += "Sterbetag von " + new JVDateFormatTTMMJJJJ().format(d)
             + "  ";
       }
       if (sterbedatumbis.getValue() != null)
       {
         Date d = (Date) sterbedatumbis.getValue();
-        subtitle += "Sterbedatum bis " + Einstellungen.DATEFORMAT.format(d)
+        subtitle += "Sterbedatum bis " + new JVDateFormatTTMMJJJJ().format(d)
             + "  ";
       }
       if (getMitgliedStatus().getValue().equals(
@@ -3061,32 +3070,32 @@ public class MitgliedControl extends AbstractControl
         return;
       }
       ArrayList<Object> sel = (ArrayList<Object>) event.data;
-      String id = "";
-      String text = "";
+      StringBuilder id = new StringBuilder();
+      StringBuilder text = new StringBuilder();
       for (Object o : sel)
       {
         if (text.length() > 0)
         {
-          id += ",";
-          text += ", ";
+          id.append(",");
+          text.append(", ");
         }
         EigenschaftenNode node = (EigenschaftenNode) o;
         try
         {
-          id += node.getEigenschaft().getID();
-          text += node.getEigenschaft().getBezeichnung();
+          id.append(node.getEigenschaft().getID());
+          text.append(node.getEigenschaft().getBezeichnung());
         }
         catch (RemoteException e)
         {
           Logger.error("Fehler", e);
         }
       }
-      eigenschaftenabfrage.setText(text);
-      settings.setAttribute("mitglied.eigenschaften", id);
+      eigenschaftenabfrage.setText(text.toString());
+      settings.setAttribute("mitglied.eigenschaften", id.toString());
     }
   }
 
-  public class EigenschaftTreeFormatter implements TreeFormatter
+  public static class EigenschaftTreeFormatter implements TreeFormatter
   {
 
     public void format(TreeItem item)
@@ -3112,7 +3121,7 @@ public class MitgliedControl extends AbstractControl
     }
   }
 
-  class EigenschaftListener implements Listener
+  static class EigenschaftListener implements Listener
   {
 
     private TreePart tree;
