@@ -9,6 +9,9 @@
  * heiner@jverein.de
  * www.jverein.de
  * $Log$
+ * Revision 1.9  2011-01-15 09:46:49  jost
+ * Tastatursteuerung wegen Problemen mit Jameica/Hibiscus wieder entfernt.
+ *
  * Revision 1.8  2010-11-27 10:56:35  jost
  * Redakt.
  *
@@ -95,6 +98,7 @@ import de.jost_net.JVerein.keys.IntervallZusatzzahlung;
 import de.jost_net.JVerein.rmi.Mitglied;
 import de.jost_net.JVerein.rmi.Zusatzbetrag;
 import de.jost_net.JVerein.util.Dateiname;
+import de.jost_net.JVerein.util.JVDateFormatTTMMJJJJ;
 import de.willuhn.datasource.rmi.DBIterator;
 import de.willuhn.datasource.rmi.DBService;
 import de.willuhn.datasource.rmi.ResultSetExtractor;
@@ -172,7 +176,7 @@ public class ZusatzbetragControl extends AbstractControl
 
     Date d = getZusatzbetrag().getFaelligkeit();
 
-    this.faelligkeit = new DateInput(d, Einstellungen.DATEFORMAT);
+    this.faelligkeit = new DateInput(d, new JVDateFormatTTMMJJJJ());
     this.faelligkeit.setTitle("Fälligkeit");
     this.faelligkeit.setText("Bitte Fälligkeitsdatum wählen");
     this.faelligkeit.addListener(new Listener()
@@ -221,7 +225,7 @@ public class ZusatzbetragControl extends AbstractControl
     }
 
     Date d = getZusatzbetrag().getStartdatum();
-    this.startdatum = new DateInput(d, Einstellungen.DATEFORMAT);
+    this.startdatum = new DateInput(d, new JVDateFormatTTMMJJJJ());
     this.startdatum.setTitle("Startdatum");
     this.startdatum.setText("Bitte Startdatum wählen");
     this.startdatum.addListener(new Listener()
@@ -253,7 +257,7 @@ public class ZusatzbetragControl extends AbstractControl
     Integer i = getZusatzbetrag().getIntervall();
     if (i == null)
     {
-      i = new Integer(0);
+      i = Integer.valueOf(0);
     }
     this.intervall = new SelectInput(IntervallZusatzzahlung.getArray(),
         new IntervallZusatzzahlung(i));
@@ -268,7 +272,7 @@ public class ZusatzbetragControl extends AbstractControl
     }
 
     Date d = getZusatzbetrag().getEndedatum();
-    this.endedatum = new DateInput(d, Einstellungen.DATEFORMAT);
+    this.endedatum = new DateInput(d, new JVDateFormatTTMMJJJJ());
     this.endedatum.setTitle("Startdatum");
     this.endedatum.setText("Bitte Startdatum wählen");
     this.endedatum.addListener(new Listener()
@@ -295,7 +299,7 @@ public class ZusatzbetragControl extends AbstractControl
 
     Date d = getZusatzbetrag().getAusfuehrung();
 
-    this.ausfuehrung = new DateInput(d, Einstellungen.DATEFORMAT);
+    this.ausfuehrung = new DateInput(d, new JVDateFormatTTMMJJJJ());
     this.ausfuehrung.setTitle("Ausführung");
     this.ausfuehrung.setText("Bitte Ausführungsdatum wählen");
     this.ausfuehrung.addListener(new Listener()
@@ -337,7 +341,7 @@ public class ZusatzbetragControl extends AbstractControl
       {
         while (rs.next())
         {
-          werte.addElement(Einstellungen.DATEFORMAT.format(rs.getDate(1)));
+          werte.addElement(new JVDateFormatTTMMJJJJ().format(rs.getDate(1)));
         }
         return null;
       }
@@ -424,14 +428,14 @@ public class ZusatzbetragControl extends AbstractControl
         }
       });
       zusatzbetraegeList.addColumn("Startdatum", "startdatum",
-          new DateFormatter(Einstellungen.DATEFORMAT));
+          new DateFormatter(new JVDateFormatTTMMJJJJ()));
       zusatzbetraegeList.addColumn("nächste Fälligkeit", "faelligkeit",
-          new DateFormatter(Einstellungen.DATEFORMAT));
+          new DateFormatter(new JVDateFormatTTMMJJJJ()));
       zusatzbetraegeList.addColumn("letzte Ausführung", "ausfuehrung",
-          new DateFormatter(Einstellungen.DATEFORMAT));
+          new DateFormatter(new JVDateFormatTTMMJJJJ()));
       zusatzbetraegeList.addColumn("Intervall", "intervalltext");
       zusatzbetraegeList.addColumn("Endedatum", "endedatum", new DateFormatter(
-          Einstellungen.DATEFORMAT));
+          new JVDateFormatTTMMJJJJ()));
       zusatzbetraegeList.addColumn("Buchungstext", "buchungstext");
       zusatzbetraegeList.addColumn("Betrag", "betrag", new CurrencyFormatter(
           "", Einstellungen.DECIMALFORMAT));
@@ -478,7 +482,7 @@ public class ZusatzbetragControl extends AbstractControl
     {
       try
       {
-        Date d = Einstellungen.DATEFORMAT.parse(this.ausfuehrungSuch.getText());
+        Date d = new JVDateFormatTTMMJJJJ().parse(this.ausfuehrungSuch.getText());
         java.sql.Date sqd = new java.sql.Date(d.getTime());
         zusatzbetraege.addFilter("ausfuehrung = ?", new Object[] { sqd });
       }
