@@ -9,6 +9,9 @@
  * heiner@jverein.de
  * www.jverein.de
  * $Log$
+ * Revision 1.10  2010-10-15 09:58:29  jost
+ * Code aufgeräumt
+ *
  * Revision 1.9  2010-04-25 13:54:45  jost
  * Vorarbeiten Mitgliedskonto
  *
@@ -103,7 +106,8 @@ public class AbbuchungsmodusInput extends SelectInput
       l.add(new AbbuchungsmodusObject(Abrechnungsmodi.MO));
       l.add(new AbbuchungsmodusObject(Abrechnungsmodi.EINGETRETENEMITGLIEDER));
     }
-    return PseudoIterator.fromArray(l.toArray(new AbbuchungsmodusObject[l.size()]));
+    return PseudoIterator.fromArray(l.toArray(new AbbuchungsmodusObject[l
+        .size()]));
   }
 
   /**
@@ -115,9 +119,9 @@ public class AbbuchungsmodusInput extends SelectInput
     AbbuchungsmodusObject o = (AbbuchungsmodusObject) super.getValue();
     if (o == null)
     {
-      return new Integer(Abrechnungsmodi.JAEHRLICH);
+      return Integer.valueOf(Abrechnungsmodi.JAEHRLICH);
     }
-    return new Integer(o.abbuchungsmodus);
+    return Integer.valueOf(o.abbuchungsmodus);
   }
 
   /**
@@ -143,7 +147,7 @@ public class AbbuchungsmodusInput extends SelectInput
 
     public String[] getAttributeNames()
     {
-      return new String[] { "name"};
+      return new String[] { "name" };
     }
 
     public String getID()
