@@ -9,6 +9,9 @@
  * heiner@jverein.de
  * www.jverein.de
  * $Log$
+ * Revision 1.25  2011-01-30 08:28:42  jost
+ * Neu: Zusatzadressen
+ *
  * Revision 1.24  2011-01-29 20:33:14  jost
  * Verzögerungszeit für Suchfelder
  *
@@ -157,7 +160,7 @@ public class EinstellungImpl extends AbstractDBObject implements Einstellung
       }
       try
       {
-        Integer.parseInt(getKonto());
+        Long.parseLong(getKonto());
       }
       catch (NumberFormatException e)
       {
@@ -250,7 +253,7 @@ public class EinstellungImpl extends AbstractDBObject implements Einstellung
   public void setGeburtsdatumPflicht(Boolean geburtsdatumpflicht)
       throws RemoteException
   {
-    setAttribute("geburtsdatumpflicht", new Boolean(geburtsdatumpflicht));
+    setAttribute("geburtsdatumpflicht", Boolean.valueOf(geburtsdatumpflicht));
   }
 
   public boolean getEintrittsdatumPflicht() throws RemoteException
@@ -261,7 +264,8 @@ public class EinstellungImpl extends AbstractDBObject implements Einstellung
   public void setEintrittsdatumPflicht(Boolean eintrittsdatumpflicht)
       throws RemoteException
   {
-    setAttribute("eintrittsdatumpflicht", new Boolean(eintrittsdatumpflicht));
+    setAttribute("eintrittsdatumpflicht",
+        Boolean.valueOf(eintrittsdatumpflicht));
   }
 
   public boolean getKommunikationsdaten() throws RemoteException
@@ -272,7 +276,7 @@ public class EinstellungImpl extends AbstractDBObject implements Einstellung
   public void setKommunikationsdaten(Boolean kommunikationsdaten)
       throws RemoteException
   {
-    setAttribute("kommunikationsdaten", new Boolean(kommunikationsdaten));
+    setAttribute("kommunikationsdaten", Boolean.valueOf(kommunikationsdaten));
   }
 
   public boolean getZusatzbetrag() throws RemoteException
@@ -282,7 +286,7 @@ public class EinstellungImpl extends AbstractDBObject implements Einstellung
 
   public void setZusatzbetrag(Boolean zusatzabbuchung) throws RemoteException
   {
-    setAttribute("zusatzabbuchung", new Boolean(zusatzabbuchung));
+    setAttribute("zusatzabbuchung", Boolean.valueOf(zusatzabbuchung));
   }
 
   public boolean getVermerke() throws RemoteException
@@ -292,7 +296,7 @@ public class EinstellungImpl extends AbstractDBObject implements Einstellung
 
   public void setVermerke(Boolean vermerke) throws RemoteException
   {
-    setAttribute("vermerke", new Boolean(vermerke));
+    setAttribute("vermerke", Boolean.valueOf(vermerke));
   }
 
   public boolean getWiedervorlage() throws RemoteException
@@ -302,7 +306,7 @@ public class EinstellungImpl extends AbstractDBObject implements Einstellung
 
   public void setWiedervorlage(Boolean wiedervorlage) throws RemoteException
   {
-    setAttribute("wiedervorlage", new Boolean(wiedervorlage));
+    setAttribute("wiedervorlage", Boolean.valueOf(wiedervorlage));
   }
 
   public boolean getKursteilnehmer() throws RemoteException
@@ -312,7 +316,7 @@ public class EinstellungImpl extends AbstractDBObject implements Einstellung
 
   public void setKursteilnehmer(Boolean kursteilnehmer) throws RemoteException
   {
-    setAttribute("kursteilnehmer", new Boolean(kursteilnehmer));
+    setAttribute("kursteilnehmer", Boolean.valueOf(kursteilnehmer));
   }
 
   public boolean getLehrgaenge() throws RemoteException
@@ -322,7 +326,7 @@ public class EinstellungImpl extends AbstractDBObject implements Einstellung
 
   public void setLehrgaenge(Boolean lehrgaenge) throws RemoteException
   {
-    setAttribute("lehrgaenge", new Boolean(lehrgaenge));
+    setAttribute("lehrgaenge", Boolean.valueOf(lehrgaenge));
   }
 
   public boolean getJuristischePersonen() throws RemoteException
@@ -333,7 +337,7 @@ public class EinstellungImpl extends AbstractDBObject implements Einstellung
   public void setJuristischePersonen(Boolean juristischepersonen)
       throws RemoteException
   {
-    setAttribute("juristischepersonen", new Boolean(juristischepersonen));
+    setAttribute("juristischepersonen", Boolean.valueOf(juristischepersonen));
   }
 
   public boolean getMitgliedskonto() throws RemoteException
@@ -343,7 +347,7 @@ public class EinstellungImpl extends AbstractDBObject implements Einstellung
 
   public void setMitgliedskonto(Boolean mitgliedskonto) throws RemoteException
   {
-    setAttribute("mitgliedskonto", new Boolean(mitgliedskonto));
+    setAttribute("mitgliedskonto", Boolean.valueOf(mitgliedskonto));
   }
 
   public boolean getMitgliedfoto() throws RemoteException
@@ -353,7 +357,7 @@ public class EinstellungImpl extends AbstractDBObject implements Einstellung
 
   public void setMitgliedfoto(Boolean mitgliedfoto) throws RemoteException
   {
-    setAttribute("mitgliedfoto", new Boolean(mitgliedfoto));
+    setAttribute("mitgliedfoto", Boolean.valueOf(mitgliedfoto));
   }
 
   public boolean getZusatzadressen() throws RemoteException
@@ -363,7 +367,7 @@ public class EinstellungImpl extends AbstractDBObject implements Einstellung
 
   public void setZusatzadressen(Boolean zusatzadressen) throws RemoteException
   {
-    setAttribute("zusatzadressen", new Boolean(zusatzadressen));
+    setAttribute("zusatzadressen", Boolean.valueOf(zusatzadressen));
   }
 
   public boolean getAuslandsadressen() throws RemoteException
@@ -374,7 +378,7 @@ public class EinstellungImpl extends AbstractDBObject implements Einstellung
   public void setAuslandsadressen(Boolean auslandsadressen)
       throws RemoteException
   {
-    setAttribute("auslandsadressen", new Boolean(auslandsadressen));
+    setAttribute("auslandsadressen", Boolean.valueOf(auslandsadressen));
   }
 
   public boolean getArbeitseinsatz() throws RemoteException
@@ -384,7 +388,7 @@ public class EinstellungImpl extends AbstractDBObject implements Einstellung
 
   public void setArbeitseinsatz(Boolean arbeitseinsatz) throws RemoteException
   {
-    setAttribute("arbeitseinsatz", new Boolean(arbeitseinsatz));
+    setAttribute("arbeitseinsatz", Boolean.valueOf(arbeitseinsatz));
   }
 
   public boolean getDokumentenspeicherung() throws RemoteException
@@ -395,7 +399,8 @@ public class EinstellungImpl extends AbstractDBObject implements Einstellung
   public void setDokumentenspeicherung(Boolean dokumentenspeicherung)
       throws RemoteException
   {
-    setAttribute("dokumentenspeicherung", new Boolean(dokumentenspeicherung));
+    setAttribute("dokumentenspeicherung",
+        Boolean.valueOf(dokumentenspeicherung));
   }
 
   public String getRechnungTextAbbuchung() throws RemoteException
@@ -453,7 +458,8 @@ public class EinstellungImpl extends AbstractDBObject implements Einstellung
   public void setExterneMitgliedsnummer(Boolean externemitgliedsnummer)
       throws RemoteException
   {
-    setAttribute("externemitgliedsnummer", new Boolean(externemitgliedsnummer));
+    setAttribute("externemitgliedsnummer",
+        Boolean.valueOf(externemitgliedsnummer));
   }
 
   public Integer getAktuelleGeburtstageVorher() throws RemoteException
@@ -524,7 +530,7 @@ public class EinstellungImpl extends AbstractDBObject implements Einstellung
   public void setUpdateDiagInfos(Boolean updatediaginfos)
       throws RemoteException
   {
-    setAttribute("updatediaginfos", new Boolean(updatediaginfos));
+    setAttribute("updatediaginfos", Boolean.valueOf(updatediaginfos));
   }
 
   public Date getUpdateLastCheck() throws RemoteException
